fix: changed content for correct webpage description

--- a/request.html
+++ b/request.html
@@ -8,7 +8,7 @@
     <!--Title-->
     <title>Memory Gates</title>
     <!--Description-->
-    <meta name="description" content="Main webpage creating Memory Gates for important information">
+    <meta name="description" content="Request a Memory Gate for important information">
     <!--Keywords-->
     <meta name="keywords" content="Mnemonics, Torii, Memory, Learning, Japan">
     <!--Name of Author-->
