feat: added content to mnemonics section

--- a/about.html
+++ b/about.html
@@ -46,14 +46,14 @@
             </div>
         </section>
         <section id="mnenomics">
-            <h2 id="h-statement">Conquer your mind!</h2>
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis
-                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint
-                occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+            <h2 id="m-introduction">The true nature of Memory</h2>
+            <p> A red gate stands in between the mainland and an island, in the water. Most people have seen and know this picture, but
+            they do not know the name. The image – a seemingly random constellation of items is more memorable than the
+            name of the gate.
+            This is how the memory actually works. As US Memory Champ Joshua Foer says: „Memory is non-linear.“ The brain associates
+            items via various factors, and making sense of the factors is called Mnemonics – The art of remembering. Various memory
+            athletes have shown tremendous feats of memorisation, and we use these techniques to help you not to forget.
+            </p>
         </section>
         <br>
         <!-- Types of Memory Gates
@@ -115,9 +115,7 @@
                     aria-label="Follow our Instagram! (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a></li>
         </ul>
     </footer>
-
     <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>
-
 </html>
