feat: added content to m_techniques section

--- a/about.html
+++ b/about.html
@@ -68,10 +68,11 @@
                 <div class="m-explanation">
                     <h3>The Story Gate</h3>
                     <br>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                    dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat.</p>
+                    <p>Various stories and myths have stood the test of time. King Arthur, Heracles, Prince Siddharta... their tales were told
+                    in a way which made it possible to remember information even without written media.
+                    This phenomenon can be used to quickly remember many random things you require on a list. If you can let your mind
+                    create a story containing everything you need to know, you can skip writing a shopping list for good.
+                    </p>
                 </div>
             </div>
             <div class="m_summary">
@@ -81,10 +82,11 @@
                 <div class="m-explanation">
                     <h3>The Number Gate</h3>
                     <br>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                    dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat.</p>
+                    <p>Named after its creator, the Major Method is the most popular way to memorise numbers. You exchange number foe
+                    consonants and create small words or phrases. This way, even number with larger digits can stay in your mind.
+                    Do you see the number 4,617,521? What I see is a gate to the R(u)sh D(u)ck L(a)nd, a theme park made for duck races.
+                    Seems silly? But does it still seem silly when you remember important statistics with this method?
+                    </p>
                 </div>
             </div> 
             <div class="m_summary">
@@ -94,10 +96,14 @@
                 <div class="m-explanation">
                     <h3>The Palace Gate</h3>
                     <br>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                    dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat.</p>
+                    <p>Around 500 years BC, the Greek philosopher Euripides achieved an astounding feat. In his mind, he was able to tell the
+                    whereabouts of all people inside a collapsed building. This way, he was able to find the remains of every person for the
+                    families to properly mourn and lay to rest.
+                    It is the first mention of a mind palace. Spatial awareness is the most basic of human skills and this technique uses
+                    this skill to link information with familiar locations. The mind palace can be used to store massive amounts of
+                    information for almost indefinitely, like one of the greatest literary characters, Sherlock Holmes, has proven time and
+                    time again.
+                    </p>
                 </div>
             </div>
         </section>
