chore: added missing quotation mark

--- a/confirmation.html
+++ b/confirmation.html
@@ -45,7 +45,7 @@
             </div>
             <div id="r_gratitude_2">
                 <h2>We will send you an confirmation mail shortly.
-                    Click on "Memory Gates to return to the main page. 
+                    Click on "Memory Gates" to return to the main page. 
                 </h2>
             </div>
         </section>
