--- a/confirmation.html
+++ b/confirmation.html
@@ -44,7 +44,7 @@
                 <h1>Thank your for submitting your request!</h1>
             </div>
             <div id="r_gratitude_2">
-                <h2>We will send you an confirmation mail shortly.
+                <h2>We will send you a confirmation mail shortly.
                     Click on "Memory Gates" to return to the main page. 
                 </h2>
             </div>
