feat: added content to 2nd services section

--- a/services.html
+++ b/services.html
@@ -45,15 +45,14 @@
                 <h1>Follow my lead!</h1>
             </div>
         </section>
-        <section id="statement">
-            <h2 id="h-statement">Conquer your mind!</h2>
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis
-                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint
-                occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+        <section id="s-summary">
+            <h2>How can we help you?</h2>
+            <p> Mnemonics are often a very daunting subject. The art of memory tells its users to let go of common logic and structure
+            in order to open their actual remembering capabilities. This requirement has driven many people from learning these
+            useful skills.
+            We from Memory Gates want to help you have a good introduction into the art of memory. Our mission is to open pathways
+            for your memory and create gates to help you find the way. Just like a fox in Japanese mythology, we want to guide you
+            to places and views you have never seen before. </p>
         </section>
         <!--Quotes
     This element will contain another hero image as well as quotes to illustrate the potential of human memory.-->
