--- a/services.html
+++ b/services.html
@@ -62,16 +62,14 @@
                     <img src="assets/images/kyoto_1280.jpg" alt="Inside view of a row of Torii Gates.">
                 </div>
                 <div class="explanation-box">
-                <h3>Memory Guidance</h3>
-                <br>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis
-                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint
-                occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <br>
+                    <h3>Memory Guidance</h3>
+                    <br>
+                    <p>You are close to an important deadline, but you cannot get those pieces of information into your head? Whenever you need
+                    someone to help you memorise something fast, we at Memory Gates offer assistance. Send in the data you need to memorise
+                    via our “Build a Gate” webpage. Our team will create a Memory Gates sheet so that you will memorize that data in no
+                    time. Be it a test at school, a presentation at a business conference or maybe the lines you say to your partner, Memory
+                    Gates will help you etch whatever you need into your mind.</p>
+                    <br>
                 </div>
             </div>
             <div id="creativity">
@@ -81,13 +79,13 @@
                 <div  class="explanation-box">
                     <h3>Find your Style!</h3>
                     <br>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                        dolore magna
-                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis
-                        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                        Excepteur sint
-                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>Memory needs creativity. The ability to combine seemingly random things is absolutely necessary to improve your brain.
+                    “But I am not a creative person!” is what many people would say. However, creativity does not mean artistry. In
+                    Japanese, the word for creativity is “souzouryoku”, the power to create/build. In a sense, creativity is productivity.
+                    We at Memory Gates know how essential creativity is in the modern world, not just for memory, but for the modern market.
+                    Via personal sessions, we can discover in which you can unleash your creative powers. Not only will this help you
+                    improve your memory, but also realise hidden potentials you never realized you had.
+                    </p>
                     <br>
                 </div>
             </div>
@@ -98,13 +96,12 @@
                 <div  class="explanation-box">
                 <h3>Mnemonics Training</h3>
                 <br>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                    dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis
-                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint
-                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>As we at Memory Gates believe in the power of Mnemonic techniques, we strive to make these techniques accessible to
+                everyone. However, our biggest wish is for you to use memory strategies on your own. The path to mastering Mnemonics is
+                a long one, and no path will ever be the same. Nevertheless, we offer every client our services to find out their unique
+                strengths and dispositions to effectively learn and apply the Mnemonic technique best suited for them. If you feel up to
+                the challenge, our guidance into memory strategies can massively improve your own remembering capabilities to a point
+                that not even modern psychology can scientifically explain.</p>
                 </div>
             </div>
         </section>
