fix: corrected spelling mistakes

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                 <h1>They will guide your way...</h1>
             </div>
         </section>
-        <section id="mnenomics">
+        <section id="mnemonics">
             <h2 id="m-introduction">The true nature of Memory</h2>
             <p> A red gate stands in between the mainland and an island, in the water. Most people have seen and know this picture, but
             they do not know the name. The image – a seemingly random constellation of items is more memorable than the
@@ -58,7 +58,7 @@
         <br>
         <!-- Types of Memory Gates
         In this section, the main memory techniques will be introduced and illustrated with fitting images. The arrangement should adapt to the device.-->
-        <section id="m_techniques">
+        <section id="m-techniques">
             <h2>Types of Memory Gates</h2>
             <br>
             <div class="m_summary">
