fix: removed unnecessary  line breaks

--- a/about.html
+++ b/about.html
@@ -61,13 +61,12 @@
         <section id="m-techniques">
             <h2>Types of Memory Gates</h2>
             <br>
-            <div class="m_summary">
+            <div class="m-summary">
                 <div>
                     <img src="assets/images/quill_640.png" alt="A quill writing on a blank sheet of paper.">
                 </div>
                 <div class="m-explanation">
                     <h3>The Story Gate</h3>
-                    <br>
                     <p>Various stories and myths have stood the test of time. King Arthur, Heracles, Prince Siddharta... their tales were told
                     in a way which made it possible to remember information even without written media.
                     This phenomenon can be used to quickly remember many random things you require on a list. If you can let your mind
@@ -75,13 +74,12 @@
                     </p>
                 </div>
             </div>
-            <div class="m_summary">
+            <div class="m-summary">
                 <div>
                     <img src="assets/images/pay_640.jpg" alt="A circle made up of white numbers.">
                 </div>
                 <div class="m-explanation">
                     <h3>The Number Gate</h3>
-                    <br>
                     <p>Named after its creator, the Major Method is the most popular way to memorise numbers. You exchange number foe
                     consonants and create small words or phrases. This way, even number with larger digits can stay in your mind.
                     Do you see the number 4,617,521? What I see is a gate to the R(u)sh D(u)ck L(a)nd, a theme park made for duck races.
@@ -89,13 +87,12 @@
                     </p>
                 </div>
             </div> 
-            <div class="m_summary">
+            <div class="m-summary">
                 <div>
                     <img src="assets/images/castle_640.jpg" alt="A castle on a foggy island.">
                 </div>
                 <div class="m-explanation">
                     <h3>The Palace Gate</h3>
-                    <br>
                     <p>Around 500 years BC, the Greek philosopher Euripides achieved an astounding feat. In his mind, he was able to tell the
                     whereabouts of all people inside a collapsed building. This way, he was able to find the remains of every person for the
                     families to properly mourn and lay to rest.
