fix: corrected id / name elements

--- a/request.html
+++ b/request.html
@@ -52,8 +52,8 @@
                     required>
                 <br>
                 <!-- User provides broad field of their information usage.-->
-                <label for="request_type">Information Use</label>
-                <select name="request_type" id="request-type" class="text-line" required>
+                <label for="request-type">Information Use</label>
+                <select name="request-type" id="request-type" class="text-line" required>
                     <option value="school">School</option>
                     <option value="business">Business</option>
                     <option value="private">Private</option>
