chore: corrected spelling mistake

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
         <label for="nav-toggle" class="nav-label"><i class="fa-solid fa-torii-gate"></i></label>
         <nav>
             <ul id="menu">
-                <li><a href="about.html" class="active">Mnenomics</a></li>
+                <li><a href="about.html" class="active">Mnemonics</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="request.html">Build a Gate</a></li>
             </ul>
@@ -47,13 +47,13 @@
         </section>
         <section id="mnemonics">
             <h2 id="m-introduction">The true nature of Memory</h2>
-            <p> A red gate stands in between the mainland and an island, in the water. Most people have seen and know this picture, but
-            they do not know the name. The image – a seemingly random constellation of items is more memorable than the
-            name of the gate.
-            This is how the memory actually works. As US Memory Champ Joshua Foer says: „Memory is non-linear.“ The brain associates
-            items via various factors, and making sense of the factors is called Mnemonics – The art of remembering. Various memory
-            athletes have shown tremendous feats of memorisation, and we use these techniques to help you not to forget.
-            </p>
+                <p> Curious image, is it not? A figure cloaked in black, holding a katana and wearing a Inari mask. By the way, can you 
+                remember the color of the gate? It is white, no? Can you see that swordsman with his robes in your mind?
+                This is how the memory actually works. As US Memory Champ Joshua Foer says: "Memory is non-linear." The brain associates
+                items via various factors, including spacial proximity, temporal proximity and more. Mking sense of the factors is called 
+                Mnemonics – The art of remembering. Various memory athletes have shown tremendous feats of memorization, and we use 
+                these techniques to help you not forget.
+                </p>
         </section>
         <br>
         <!-- Types of Memory Gates
