--- a/services.html
+++ b/services.html
@@ -31,7 +31,7 @@
         <label for="nav-toggle" class="nav-label"><i class="fa-solid fa-torii-gate"></i></label>
         <nav>
             <ul id="menu">
-                <li><a href="about.html">Mnenomics</a></li>
+                <li><a href="about.html">Mnemonics</a></li>
                 <li><a href="services.html"class="active">Services</a></li>
                 <li><a href="request.html">Build a Gate</a></li>
             </ul>
