--- a/request.html
+++ b/request.html
@@ -70,7 +70,7 @@
                 <!-- User provides own areas of expertises. These would be used to create custom-made mnemonic images for the user.-->
                 <label for="interests">Please describe your own personal strenghts and interests.</label>
                 <br>
-                <textarea name="interests" id="interests" cols="24" rows="6" placeholder="My strenghts and interests are..."
+                <textarea name="interests" id="interests" cols="24" rows="6" placeholder="My strengths and interests are..."
                     required></textarea>
                 <br>
                 <!-- User uploads a file with a more detailed description of their information.-->
