fix: removed a element from button

--- a/request.html
+++ b/request.html
@@ -33,7 +33,7 @@
             <ul id="menu">
                 <li><a href="about.html">Mnemonics</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="request.html"class="active">Build a Gate</a></li>
+                <li><a href="request.html" class="active">Build a Gate</a></li>
             </ul>
         </nav>
     </header>
@@ -53,7 +53,7 @@
                 <br>
                 <!-- User provides broad field of their information usage.-->
                 <label for="request-type">Information Use</label>
-                <select name="request-type" id="request-type" class="text-line" required>
+                <select name="request-type" id="request-type" class="text-line" placeholder="Select Use" required>
                     <option value="school">School</option>
                     <option value="business">Business</option>
                     <option value="private">Private</option>
@@ -77,9 +77,7 @@
                 <label for="information">Insert an image or word file for your information.</label>
                 <input type="file" name="information" id="information">
                 <br>
-                <a href="confirmation.html">
-                    <button type="submit" class="form-button">Request Gate</button>
-                </a>
+                <button type="submit" class="form-button">Request Gate</button>
                 <button type="reset" class="form-button">Begin Anew</button>
             </form>
         </section> 
