fix: adjusted content

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
                 <p> Curious image, is it not? A figure cloaked in black, holding a katana and wearing a Inari mask. By the way, can you 
                 remember the color of the gate? It is white, no? Can you see that swordsman with his robes in your mind?
                 This is how the memory actually works. As US Memory Champ Joshua Foer says: "Memory is non-linear." The brain associates
-                items via various factors, including spacial proximity, temporal proximity and more. Mking sense of the factors is called 
+                items via various factors, including spacial proximity, temporal proximity and more. Making sense of the factors is called 
                 Mnemonics – The art of remembering. Various memory athletes have shown tremendous feats of memorization, and we use 
                 these techniques to help you not forget.
                 </p>
@@ -80,8 +80,8 @@
                 </div>
                 <div class="m-explanation">
                     <h3>The Number Gate</h3>
-                    <p>Named after its creator, the Major Method is the most popular way to memorise numbers. You exchange number foe
-                    consonants and create small words or phrases. This way, even number with larger digits can stay in your mind.
+                    <p>Named after its creator, the Major Method is the most popular way to memorise numbers. You exchange number for
+                    consonants and create small words or phrases. This way, even number with many digits can stay in your mind.
                     Do you see the number 4,617,521? What I see is a gate to the R(u)sh D(u)ck L(a)nd, a theme park made for duck races.
                     Seems silly? But does it still seem silly when you remember important statistics with this method?
                     </p>
@@ -93,10 +93,10 @@
                 </div>
                 <div class="m-explanation">
                     <h3>The Palace Gate</h3>
-                    <p>Around 500 years BC, the Greek philosopher Euripides achieved an astounding feat. In his mind, he was able to tell the
-                    whereabouts of all people inside a collapsed building. This way, he was able to find the remains of every person for the
+                    <p>Around 500 years BC, the Greek philosopher Euripides achieved an astounding feat. In his mind, he was able to reconstruct the
+                    locations of all people inside a collapsed building. This way, he was able to find the remains of every person for the
                     families to properly mourn and lay to rest.
-                    It is the first mention of a mind palace. Spatial awareness is the most basic of human skills and this technique uses
+                    It is the first mention of a mind palace in history. Spatial awareness is the most basic of human skills and this technique uses
                     this skill to link information with familiar locations. The mind palace can be used to store massive amounts of
                     information for almost indefinitely, like one of the greatest literary characters, Sherlock Holmes, has proven time and
                     time again.
