--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <h2 id="h-statement">Find your way through your memory!</h2>
                 <p> In Shintoism, the Japanese local religion, Torii serve as special gateways. 
                     They connect the land of the living with the realm of the gods. Nowadays,
-                    you can find Torii anywhere in Japan. In midst of a city, before shrines,in midst of deep forest 
-                    even in the water. Every gate has its own characteristics which makes it memorable.
-                    With the help of the memorable imagery of the Torii gates, we at Memory Gate want to help you
+                    you can find Torii anywhere in Japan. In midst of a city, in front of shrines, in midst of deep forests 
+                    and even in the rives and the ocean. Every gate has its own characteristics which make it memorable.
+                    With the help of the memorable imagery of the Torii gates, we at Memory Gates want to help you
                     improve your memory. Let us set up Torii for your mind for all information you need. Who knows?
                     At some point, you might be able to build these gates yourself.</p>
         </section>
