--- a/services.html
+++ b/services.html
@@ -48,9 +48,9 @@
         <section id="s-summary">
             <h2>How can we help you?</h2>
             <p> Mnemonics are often a very daunting subject. The art of memory tells its users to let go of common logic and structure
-            in order to open their actual remembering capabilities. This requirement has driven many people from learning these
+            in order to unlock new ways of combining information. This requirement has driven many people from learning these
             useful skills.
-            We from Memory Gates want to help you have a good introduction into the art of memory. Our mission is to open pathways
+            We at Memory Gates want to help you have a good introduction into the art of memory. Our mission is to open paths
             for your memory and create gates to help you find the way. Just like a fox in Japanese mythology, we want to guide you
             to places and views you have never seen before. </p>
         </section>
@@ -64,7 +64,7 @@
                 <div class="explanation-box">
                     <h3>Memory Guidance</h3>
                     <p>You are close to an important deadline, but you cannot get those pieces of information into your head? Whenever you need
-                    someone to help you memorise something fast, we at Memory Gates offer assistance. Send in the data you need to memorise
+                    someone to help you memorize something fast, we at Memory Gates offer assistance. Send in the data you need to memorise
                     via our “Build a Gate” webpage. Our team will create a Memory Gates sheet so that you will memorize that data in no
                     time. Be it a test at school, a presentation at a business conference or maybe the lines you say to your partner, Memory
                     Gates will help you etch whatever you need into your mind.</p>
@@ -78,7 +78,7 @@
                 <div class="explanation-box">
                     <h3>Find your Style!</h3>
                     <p>Memory needs creativity. The ability to combine seemingly random things is absolutely necessary to improve your brain.
-                    “But I am not a creative person!” is what many people would say. However, creativity does not mean artistry. In
+                    “But I am not a creative person!”... is what many people would say. However, creativity does not mean artistry. In
                     Japanese, the word for creativity is “souzouryoku”, the power to create/build. In a sense, creativity is productivity.
                     We at Memory Gates know how essential creativity is in the modern world, not just for memory, but for the modern market.
                     Via personal sessions, we can discover in which you can unleash your creative powers. Not only will this help you
@@ -97,8 +97,8 @@
                 everyone. However, our biggest wish is for you to use memory strategies on your own. The path to mastering Mnemonics is
                 a long one, and no path will ever be the same. Nevertheless, we offer every client our services to find out their unique
                 strengths and dispositions to effectively learn and apply the Mnemonic technique best suited for them. If you feel up to
-                the challenge, our guidance into memory strategies can massively improve your own remembering capabilities to a point
-                that not even modern psychology can scientifically explain.</p>
+                the challenge, our guidance sessions into memory strategies can massively improve your own remembering capabilities to a 
+                point that not even modern psychology can scientifically explain.</p>
                 </div>
             </div>
         </section>
